--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div>
-        <div></div>
+        <div>
+            my details
+        </div>
     </div>
 </body>
 </html>
