--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <div>
-        <div class="yeye">
-            <h1>MY DETAILS</h1>
-        </div>
+      <div class="yeye">
+        <h1>MY DETAILS</h1>
+      </div>
+      <div>
+        <p>first name JESCA</p>
+        
+      </div>
     </div>
-</body>
+  </body>
 </html>
