--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       </div>
       <div>
         <p>first name JESCA</p>
-        
+        <p>middle name PAUL</p>
+
       </div>
     </div>
   </body>
