--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div>
         <p>first name JESCA</p>
         <p>middle name PAUL</p>
+        <p>sun name KITYEGE</p>
 
       </div>
     </div>
