--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <p>first name JESCA</p>
         <p>middle name PAUL</p>
         <p>sun name KITYEGE</p>
-
+      </div>
+      <div>
+        <p>first name ANNASTAZIA</p>
+        <p>middle name PAUL</p>
+        <p>sun name KITYEGE</p>
       </div>
     </div>
   </body>
