--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <p>middle name PAUL</p>
         <p>sun name KITYEGE</p>
       </div>
+      <div>
+        <P>WORK EXPERIENCES</P>
+      </div>
     </div>
   </body>
 </html>
