--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
       <div>
         <P>WORK EXPERIENCES</P>
+        <P>EDUCATION BACKGROUND</P>
       </div>
     </div>
   </body>
