--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div>
         <P>WORK EXPERIENCES</P>
         <P>EDUCATION BACKGROUND</P>
+        <p>diploma of information and communication technology</p>
       </div>
     </div>
   </body>
