--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
       <div>
         <P>WORK EXPERIENCES</P>
+        <p>web development</p>
         <P>EDUCATION BACKGROUND</P>
         <p>diploma of information and communication technology</p>
       </div>
