--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div>
         <P>WORK EXPERIENCES</P>
         <p>web development</p>
+        <p>designer of different poster</p>
         <P>EDUCATION BACKGROUND</P>
         <p>diploma of information and communication technology</p>
       </div>
