--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <P>WORK EXPERIENCES</P>
         <p>web development</p>
         <p>designer of different poster</p>
+        <p>maintainance</p>
         <P>EDUCATION BACKGROUND</P>
         <p>diploma of information and communication technology</p>
       </div>
